BugFix - CSS overlap

--- a/css/quizz-list.css
+++ b/css/quizz-list.css
@@ -139,7 +139,7 @@
 
     right: 0;
     top: 20px;
-    z-index: 2;
+    z-index: 0.5;
 
     border-radius: 5px 0 0 5px;
 
